--- a/src/components/delete.css
+++ b/src/components/delete.css
@@ -1,13 +1,14 @@
 .btn{
-    width:6vw;
+    width:5vw;
     height:3vh;
+    background-color:burlywood;
     
 }
 @media (max-width:800px) {
     .btn{
-        width:10vw;
+        width:6vw;
         height:2.5vh;
-        font-size:smaller;
+        font-size:7px;
     }
 
 }
