--- a/src/components/home.css
+++ b/src/components/home.css
@@ -56,8 +56,7 @@
   }
  #googlebtn{
      
-      display:flex;
-      justify-content:center;
+    
      margin-top:4vh;
     
   }
@@ -76,8 +75,14 @@
   .or{
       padding-top:3vh;
   }
-  
-  
+  .incorrectcredential{
+    color:red;
+    font-size:1.2vw;
+     margin-top:3vh;
+  }
+  .nodisplay{
+      display:none;
+  }
   
   .plower{
       padding-top:1.6vh;
@@ -109,5 +114,12 @@ margin-top:1vh;
    .or{
    display:none;
 }
+.incorrectcredential{
+    font-size:medium;
+}
 
       }
+
+
+
+    
