--- a/src/components/front.css
+++ b/src/components/front.css
@@ -38,13 +38,12 @@
     justify-content:start;
     width:100vw;
     height:10vh;
-   
     border-radius: 5px;
-   transition: all .9s ;
+    transition: all .9s ;
    
- 
-
+   
 }
+
 .navarticle{
     font-size:larger;
     font-style:italic;
@@ -153,14 +152,14 @@ display:none;
     height:35vh;
     align-items: center;
     justify-content: center;
-   margin-top:2vh;
+   
    border-radius:5px;
   
 }
   
 .profiletitlep{
     text-align: left; 
-  color:black;
+    color:black;
 }
 
 .frontskillslist{
@@ -171,7 +170,7 @@ flex-direction: column;
 justify-content:space-evenly;
 background-color:aqua ;
 margin-left:1vw;
-margin-top:2vh;
+
 transition-duration: 0.8s;
 border-radius:10px;
 }
@@ -185,7 +184,7 @@ border-radius:10px;
     background-image: url('./pictures/plane.jpeg');
     background-size:cover;
     margin-left:1vw;
-    margin-top:2vh;
+   
     transition-duration: 0.8s;
     border-radius:10px;
 }
@@ -249,6 +248,19 @@ border-radius:10px;
     100% {left:95vw; opacity :0.9; display:'none' }  
 }
 
+@keyframes showw {
+    0%   { height:5vh }
+    50%  {  height:20vh }
+     100% {  height:40vh}
+   
+}
+@keyframes noshow {
+    0%   {  height:40vh}
+    50%  {  height:20vh }
+    100%  {  height:5vh }
+  
+}
+
 @media (min-width:800px){
     .frontpersonalproject:hover{
         scale: 1.1;
@@ -273,19 +285,22 @@ border-radius:10px;
        flex-direction:column;
        height:100%;
    }
-    .nosidenav{
-      display:none;
+    
+     .frontnav{
+       
      }
-   
      .fabars{
         size:3vw;
         width:4vw;
         display:block;
+       
+        margin-left:10vw;
      }
      .nofabars{
         size:3vw;
         width:4vw;
         display:block;
+     
      }
      .foricondiv:first-child{
         size:30vw;
@@ -294,40 +309,45 @@ border-radius:10px;
     
      .sidenav{
         display:flex;
-         width:63vw;
-         height:20vh;
-       border-radius:15px;
+         width:100vw;
+        height:30vh;
+         margin-top: -10vh;
+        background-color:blue;
         align-items:center;
         justify-content:center;
+     
+       }   
          
-      
-       
-     }
+   
+    .nosidenav{
+display: none;
+    
+    
+    }
+
 
 .sidelist1{
     display:flex;
     width:25vw;
-    height:20vh;
+    height:25vh;
     flex-direction:column;
     align-items:center;
     justify-content:space-evenly;
-    background-color:whitesmoke;
+  
     
 }
 .sidelist2{
     display:flex;
     width:25vw;
-    height:20vh;
+    height:25vh;
     flex-direction:column;
     align-items:center;
     justify-content:space-evenly;
-    background-color:whitesmoke;
+    
     margin-left:1vw;
 }
  
-     .nosidenav{
-    display: none;
-    }
+   
     .list{
         width:17vw;
        
@@ -352,24 +372,28 @@ border-radius:10px;
     .frontskills{
         align-items:center;
         width:90vw;
+        
     }
     .frontskillsdetail{
         flex-direction: column;
         align-items:center;
         height:auto;
         overflow:auto;
+       
     }
     .frontworkexperience{
         animation:none;
         margin-left:3vw;
         width:65vw;
         height:55vh;
+        margin-top:1vh;
     }
     .frontworkexperiencereverse{
         animation:none;
         margin-left:3vw;
         width:65vw;
         height:55vh;
+        margin-top:1vh;
     }
     .slider{
         height:95vh;
@@ -380,12 +404,15 @@ border-radius:10px;
         flex-direction:column;
         align-items:center;
         justify-content:center;
+        margin-top:1vh;
 
     }
     .frontskillslist{
         width:65vw;
+        margin-top:1vh;
     }
     .profiletitle{
+        margin-top:1vh;
         width:65vw;
         height:45vh;
 
@@ -397,5 +424,12 @@ border-radius:10px;
         height:5vh;
        background-color:white;
        
+    }
+    .forbac{
+        width:75vw;
+        height:95vh;
+        background-color:white;
+    
+    opacity: 0.1;
     }
   }
